2006-03-17  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-file.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/engine/gnc-hooks.[ch]: Add a "book saved" hook.  Use this to
	update the window titles after a file is saved.  Fixes 334789.

2006-03-17  Andreas Köhler  <andi5.py@gmx.net>

	* src/engine/Split.c: Fix return value of get_corr_account_split
	  and reverse the tests of its callers. Fix 334801.

2006-03-16  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-account.c:
	* src/gnome-utils/gnc-tree-view-commodity.c:
	* src/gnome-utils/gnc-tree-view-price.c:
	* src/gnome-utils/gnc-tree-view.c: Use the stable sort function
	from Account.c to back up the user selected primary sort
	column. Fixes 334595.  Also collapse common code, pull strings via
	the model, and use the utf8 collate function instead of strcmp.

	* src/gnome-utils/gnc-tree-model-account.c:
	* src/engine/Account.[ch]:
	* src/engine/Recurrence.c: Collapse duplicated code into a single
	function.

2006-03-16  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome/dialog-commodities.c: 
	* src/gnome/dialog-price-edit-db.c: Add row_activated callback to
	  commodity and price editor tree views. Fix 334661.

	* src/gnome/gnc-plugin-page-register.c: Make register ui update
	  unconditionally if in a GncEmbeddedWindow.

2006-03-16  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-commodity.c:
	* src/gnome-utils/gnc-tree-view-price.c:
	* src/engine/Account.c:
	* src/core-utils/gnc-glib-utils.[ch]: Add a wrapper function for
	g_utf8_collate that handles checking for null pointers or null
	strings.

	* src/gnome-utils/gnc-tree-model-account.[ch]:
	* src/gnome-utils/gnc-tree-view-account.c: Move the computation of
	accounting period balances into the model and colorize it.

2006-03-16  Christian Stimming <stimming@tuhh.de>

	* src/gnome/Makefile.am: Add more linker flags for referenced
	libraries. Necessary when the required libraries are not inferred